fixed some spacing issues on header

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,7 +39,7 @@ html, body {
 // .................................................. Header
 
 .nav {
-  margin: 0vh 0vw 0vh 50vw;
+  margin: 0vh 0vw 0vh 45vw;
   display: flex;
   position: sticky;
   width: 100%;
